# figsync

./: README.md  pyproject.toml
src/figsync/: __init__.py  figma_batch.py  figma_call.py  rename_frames.py  server_http.py
